src/objects/DataInformation__c.object
<CustomObject>
    <description>Acts as a manager for working on projects to translate data objects to an information definition. The object is related to other records in DataObject__c hiearchy and used to act as a design and collection of data sources to design information.</description>
    <fields>
        <fullName>Accountability__c</fullName>
        <description>Defines who and what the process is for the accountability of this information.</description>
        <inlineHelpText>Defines who and what the process is for the accountability of this information.</inlineHelpText>
        <label>Accountability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>The purpose as to who and what this information serves.</description>
        <inlineHelpText>The purpose as to who and what this information serves.</inlineHelpText>
        <label>Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <description>The legal or internal business policies around what makes this information valid.</description>
        <inlineHelpText>The legal or internal business policies around what makes this information valid.</inlineHelpText>
        <label>Requirements</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TechnicalDescription__c</fullName>
        <label>Technical Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <label>Data Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>